# userver

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  server.rs
src/assets/: index.html
src/resources/: index.html
